VERSIONS
--------
0.2.4.post1
      - Allow for sys.stderr in settings files.
      - Internals: cleaner parsing of settings files.
0.2.4
      - The `settings_path=''` parameter to log_calls

      - The `used_unused_keywords` decorator

      - value of `logger` can be either a logger instance (logging.Logger object)
        OR the name of a logger.

      - Loggers can indent too. Why shouldn't they? It just looks weird. So?
        "We're all adults here."
        It looks weird because only the message is indented, and every logged
        output message typically begins with a left-aligned clunky header,
        which sometimes you don't need. So:

      - example: create handlers with formatters that have format strings
        of just `%(message)s`, which writes just... the message,including
        possible padding.
                test_log_calls_more, function:
                    def main__logging_with_indent__minimal_formatters():

      - loggers can use `log_message` too, which virtualizes the richer
        interface of msg, *msgs for loggers, makes it available for loggers
        too, so that loggers can be passed multiple messages.
        Example where using `log_message` virtualizes between
        writing to print or writing to a logger.
               test_log_calls_more, function:
                    def main__log_message__all_possible_output_destinations():

      - Internals
        * get_logging_fn returns just a logging function,
          not a pair of a logging fn and a "can indent" bool:
          now everyone can indent.

        * keeping a stack of logging functions was silly, who needs it -
          just keep a stack of at most one of those (the other components grow larger)

        * DecoSetting `final_type` can now be a type (as before) or a tuple of types.
          E.g. logger setting has final_type (logging.Logger, str)
          Added test(s) for this and its repr.
